@@ -1,3 +1,5 @@
 # flake8: noqa
 from .core import Bower
 from .error import Error
+from .autoversion import (filesystem_second_autoversion,
+                          filesystem_microsecond_autoversion)
